further fix for splash whitespace

--- a/css/enter.css
+++ b/css/enter.css
@@ -1,5 +1,5 @@
 .enter-container {
-    padding: 2% 5% 2% 5%;
+    padding: 2% 10% 2% 10%;
     justify-items: center;
     justify-content: center;
     font-size: 0.8em;
